Copyright (C) 2002, 2003 Simon Josefsson
See the end for copying conditions.

* Version 0.0.12 (unreleased)

** The user database library Shisa has been improved.
Shisa now support multiple keys for users, and you can now selectively
add and remove keys via the command line interface.

** The KDC has been cleaned up and the error handling is more robust.

** The Shisa programming API is documented in the manual.

* Version 0.0.11 (released 2003-12-21)

** The Shishi library now support X.509 authenticated KDC connections via TLS.
The client currently do not check server authentication, however this
is no worse than existing UDP/TCP connections.  If client certificates
are available, the X.509 client certificate is simply sent (via TLS
handshake) to the KDC for possible pre-authentication purposes.

** The KDC now support X.509 authentication.
If server certificates are available, X.509 authenticated TLS may be
negotiated.  The KDC currently only use the client certificate details
for logging purposes.  However, it do verify client certificate
against CA certificates, if those are available.

** The KDC has been cleaned up and the error handling is more robust.

* Version 0.0.10 (released 2003-12-16)

** The TLS support in Shishid now works.

** All command line interfaces now uses getopt instead of argp.

* Version 0.0.9 (released 2003-12-12)

** A Kerberos 5 information storage system added, called Shisa.
Shisa is used by Kerberos 5 servers (KDCs) to find information about
principals.  Shisa can be extended to support various backends, such
as LDAP and SQL databases, but currently only a file system based
database is supported.  Shisa consists of two parts, a library
(libshisa, see db/) and a command line tool (shisa, see src/).  Shisa
is designed to be concurrent write safe, i.e., multiple writers to the
same database is permitted.  This is very much work in progress.

** A new tool 'shisa' added to add/remove/list/modify the Shisa database.
