@@ -48,7 +48,7 @@ shisa_cmd.c shisa_cmd.h: shisa.ggo
 shishid_SOURCES = shishid.c server.c kdc.h kdc.c \
 	shishid.ggo shishid_cmd.h shishid_cmd.c
 if STARTTLS
-shishid_SOURCES += starttls.c
+shishid_SOURCES += starttls.c resume.c
 endif
 shishid_LDADD = ../gl/libfoo.la ../lib/libshishi.la ../db/libshisa.la \
 	@LIBGNUTLS_LIBS@ @LTLIBINTL@
